<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.websmithing.gpstracker.GpsTrackerActivity" >
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtUserName"
        android:hint="@string/user_name"
        android:text="test"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone"/>

    <RadioGroup
        android:id="@+id/intervalRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/lblInterval"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <RadioButton
            android:id="@+id/i1"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_minute" >
        </RadioButton>
        <RadioButton
            android:id="@+id/i5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five_minutes" >
        </RadioButton>
        <RadioButton
            android:id="@+id/i15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifteen_minutes" >
        </RadioButton>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/red_tracking_button"
        android:text="@string/tracking_is_off"
        android:id="@+id/trackingButton"
        android:layout_weight="1"
        android:height="50dip" />
    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:id="@+id/txtWebsite"
        android:hint="@string/upload_website"
        android:layout_below="@+id/txtUserName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_frequency"
        android:id="@+id/lblInterval"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/wifi_select"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:id="@+id/location_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:showText="true"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textOff="Off"
        android:textOn="On"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="Use Locaton Guard" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:text="Use WiFi Guard"
        android:layout_below="@+id/location_setting"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:id="@+id/wifi_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:showText="true"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textOff="Off"
        android:textOn="On"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select WiFi AP"
        android:layout_alignBaseline="@+id/wifi_select"
        android:layout_alignBottom="@+id/wifi_select"
        android:layout_alignRight="@+id/textView8"
        android:layout_alignEnd="@+id/textView8" />

    <Button
        android:id="@+id/wifi_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/wifi_switch"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Location Setting"
        android:layout_alignBaseline="@+id/location_setting"
        android:layout_alignBottom="@+id/location_setting"
        android:layout_toLeftOf="@+id/location_setting"
        android:layout_toStartOf="@+id/location_setting"
        android:layout_marginRight="17dp"
        android:layout_marginEnd="17dp" />

    <Button
        android:id="@+id/location_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Setting"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/location_switch"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
